fixed img overflow

--- a/style.css
+++ b/style.css
@@ -55,6 +55,7 @@ body{
 .pics-generate {
     display: flex;
     justify-content: center;
+    margin-top: 2rem;
 }
 
 button {
@@ -76,10 +77,10 @@ button:hover {
     flex-direction: column;
     align-items: center;
     gap: 20px;
-    justify-content: center;
+    justify-content: start;
     height: 80vh;
     margin-bottom: 2rem;
-    overflow: scroll;
+    overflow: auto;
 }
 
 p {
